<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/decline_noun_decline_prompt_textview"
        android:text="@string/decline_noun_decline_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/decline_noun_dict_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/decline_noun_dict_placeholder_text"
        android:textStyle="italic"
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/decline_noun_into_prompt_textview"
        android:text="@string/decline_noun_into_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center_horizontal">

    <EditText
        android:id="@+id/decline_noun_case_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="none"
        android:textSize="18dp"
        android:textAllCaps="true"
        android:gravity="center_horizontal"
        tools:text="@string/decline_noun_case_placeholder_text"/>

    <EditText
        android:id="@+id/decline_noun_number_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="none"
        android:textSize="18dp"
        android:textAllCaps="true"
        tools:text="@string/decline_noun_number_placeholder_text"/>
    </LinearLayout>

    <EditText
        android:id="@+id/decline_noun_input_edittext"
        tools:text="@string/decline_noun_input_placeholder_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:background="@drawable/edittext_round_corners"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:singleLine="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/decline_noun_a_macron_button"
            android:text="@string/decline_noun_a_macron"
            style="@style/selector_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/decline_noun_e_macron_button"
            android:text="@string/decline_noun_e_macron"
            style="@style/selector_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/decline_noun_i_macron_button"
            android:text="@string/decline_noun_i_macron"
            style="@style/selector_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/decline_noun_o_macron_button"
            android:text="@string/decline_noun_o_macron"
            style="@style/selector_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/decline_noun_u_macron_button"
            android:text="@string/decline_noun_u_macron"
            style="@style/selector_button"
            android:layout_weight="1"/>

    </LinearLayout>
    <Button
        android:id="@+id/decline_noun_submit_button"
        style="@style/quiz_submit_button"
        android:text="@string/decline_noun_submit"/>

</LinearLayout>